--- a/index.html
+++ b/index.html
@@ -117,50 +117,78 @@
             <div class="content">
                 <div class="cont1">
                     <div class="inside">
-                        <img src=".\assets\Thumbnail-8.png" alt="">
+                        <img src=".\assets\Thumbnail-8.png" alt="" class="wid">
                         <div class="flex">
                             <img src=".\assets\Ellipse 4-6.png" alt="">
                             <h5>Bulbuli|Coke Studio Bangla|Season 1|Ritu Raj x Nandita</h5>
                         </div>
-                        <p>Coke Studio Bangla</p><img src=".\assets\verified.png" alt="" class="verified divigm1"><br>
-                        <p>1.5M views</p><img src=".\assets\Ellipse 4-1.png" alt="" class="dot"><p>2 days ago</p>
+                        <p>Coke Studio Bangla<img src=".\assets\verified.png" alt="" class="verified divigm1"></p><br><br>
+                        <p>1.5M views<img src=".\assets\Ellipse 4-1.png" alt="" class="dot">2 days ago</p>
                     </div>
                     <div class="inside">
-                        <img src=".\assets\Thumbnail-9.png" alt="">
+                        <img src=".\assets\Thumbnail-9.png" alt="" class="wid">
                         <div class="flex">
                             <img src=".\assets\Ellipse 4-7.png" alt="">
                             <h5>Infinix Note 12: AMOLED Helio G88 SoC!</h5>
                         </div>
-                        <p>ATC Android ToTo Company</p><img src=".\assets\verified.png" alt="" class="verified divigm1"><br>
-                        <p>4.2M views</p><img src=".\assets\Ellipse 4-1.png" alt="" class="dot"><p>2 days ago</p>
+                        <p>ATC Android ToTo Company<img src=".\assets\verified.png" alt="" class="verified divigm1"></p><br><br>
+                        <p>4.2M views<img src=".\assets\Ellipse 4-1.png" alt="" class="dot">2 days ago</p>
                     </div>
                     <div class="inside">
-                        <img src=".\assets\Thumbnail-10.png" alt="">
+                        <img src=".\assets\Thumbnail-10.png" alt="" class="wid">
                         <div class="flex">
                             <img src=".\assets\Ellipse 4-8.png" alt="">
-                            <h5>My first UX Design case study - this got me my first job.</h5>
+                            <h5>My first UX Design case study - This got me my first job.</h5>
                         </div>
-                        <p>Saptarshi Prakash</p><br>
-                        <p>4.8k views</p><img src=".\assets\Ellipse 4-1.png" alt="" class="dot"><p>1 year ago</p>
+                        <p>Saptarshi Prakash</p><br><br>
+                        <p>4.8k views<img src=".\assets\Ellipse 4-1.png" alt="" class="dot">1 year ago</p>
                     </div>
                     <div class="inside playlist">
-                        <img src=".\assets\Thumbnail-10.png" alt="">
+                        <img src=".\assets\Thumbnail-11.png" alt="" class="wid">
                             <h5>My Mix</h5>
                         <p>Lopamudra Mitra,Anupam Roy,and more</p>
                     </div>
                 </div>
                 <div class="cont2">
                     <div class="inside">
-                        <img src=".\assets\Thumbnail-4.png" alt="">
+                        <img src=".\assets\Thumbnail-4.png" alt="" class="wid">
                         <div class="flex">
                             <img src=".\assets\Ellipse 4-3.png" alt="">
                             <h5>UX Design-What is it?(From Aj & Smart)</h5>
                         </div>
-                        <p>ATC Android ToTo Company</p><img src=".\assets\verified.png" alt="" class="verified divigm1"><br>
-                        <p>4.2M views</p><img src=".\assets\Ellipse 4-1.png" alt="" class="dot"><p>2 days ago</p>
+                        <p>AJ & Smar<img src=".\assets\verified.png" alt="" class="verified divigm1"></p><br><br>
+                        <p>150KM views<img src=".\assets\Ellipse 4-1.png" alt="" class="dot">3 years ago</p>
+                    </div>
+                    <div class="inside playlist">
+                        <img src=".\assets\Thumbnail-5.png" alt="" class="wid">
+                            <h5>Mix-Mombati|Dhakaiya Dose|Mohon Sharif</h5>
+                        <p>Mombati,Dhakaiya Dose,Mohon Sharif,and more</p>
+                    </div>
+                    <div class="inside">
+                        <img src=".\assets\Thumbnail-6.png" alt="" class="wid">
+                        <div class="flex">
+                            <img src=".\assets\Ellipse 4-4.png" alt="">
+                            <h5>UX Design-What is it?(From Aj & Smart)</h5>
+                        </div>
+                        <p>Nadir On The Go</p><br><br>
+                        <p>1.7M views<img src=".\assets\Ellipse 4-1.png" alt="" class="dot">1 year ago</p>
+                    </div>
+                    <div class="inside">
+                        <img src=".\assets\Thumbnail-7.png" alt="" class="wid">
+                        <div class="flex">
+                            <img src=".\assets\Ellipse 4-5.png" alt="">
+                            <h5>UX Design-What is it?(From Aj & Smart)</h5>
+                        </div>
+                        <p>Mizko<img src=".\assets\verified.png" alt="" class="verified divigm1"></p><br><br>
+                        <p>53k views<img src=".\assets\Ellipse 4-1.png" alt="" class="dot">1 year ago</p>
                     </div>
                 </div>
-                <div class="cont3"></div>
+                <div class="cont3">
+                    <img src=".\assets\Thumbnail-1.png" alt="" class="wid">
+                    <img src=".\assets\Thumbnail-2.png" alt="" class="wid">
+                    <img src=".\assets\Thumbnail-3.png" alt="" class="wid">
+                    <img src=".\assets\Thumbnail.png" alt="" class="wid">
+                </div>
             </div>
         </div>
     </div>
